--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -60,22 +60,23 @@
       <!-- Section for the saved polls to show on the page -->
 
       <h3 class="mt-4">Saved Polls</h3>
-      <% if (user && user.savedPollsData && user.savedPollsData.length > 0) { %>
-        <ul class="list-group">
-          <% user.savedPollsData.forEach(poll => { %>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              <a href="/poll/<%= poll._id %>" class="text-decoration-none"><%= poll.title %></a>
-              <div>
-                <button class="btn btn-outline-warning btn-sm save-toggle-btn saved" data-poll-id="<%= poll._id %>">
-                  <i class="bi bi-star-fill"></i>
-                </button>
-              </div>
-            </li>
-          <% }); %>
-        </ul>
-      <% } else { %>
-        <p>You haven't saved any polls yet.</p>
-      <% } %>
+  <% if (savedPolls && savedPolls.length > 0) { %>
+  <ul class="list-group">
+    <% savedPolls.forEach(poll => { %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="/poll/<%= poll._id %>" class="text-decoration-none"><%= poll.title %></a>
+        <div>
+          <button class="btn btn-outline-warning btn-sm save-toggle-btn saved" data-poll-id="<%= poll._id %>">
+            <i class="bi bi-star-fill"></i>
+          </button>
+        </div>
+      </li>
+    <% }); %>
+  </ul>
+  <% } else { %>
+  <p>You haven't saved any polls yet.</p>
+<% } %>
+
 
       <hr>
 
