Made it so that descriptions get cut off at 120 characters if poll is unexpanded in past polls page

--- a/views/pastpolls.ejs
+++ b/views/pastpolls.ejs
@@ -105,7 +105,15 @@
                 <% if (poll.importance) { %>
                   <p class="mb-1 text-muted">Importance: <strong><%= poll.importance %></strong></p>
                 <% } %>
-                <p class="mb-1"><%= poll.description || 'No description provided.' %></p>
+                <p class="mb-1 text-muted" id="desc-<%= poll._id %>">
+                  <% if (!poll.description) { %>
+                    No description provided.
+                  <% } else if (poll.description.length > 120) { %>
+                    <%= poll.description.substring(0, 120) + '...' %>
+                  <% } else { %>
+                    <%= poll.description %>
+                  <% } %>
+                </p>                
                 <small>Created on: <%= new Date(poll.createdAt).toLocaleDateString() %></small>
               </div>
 
