Added removal of a favorite from the user's profile page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -91,5 +91,7 @@
 
   <!-- Bootstrap JS (optional) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- The javascript code related to saving polls on the profile.ejs page -->
+  <script src="profile.js"></script>
 </body>
 </html>
