--- a/views/polls.ejs
+++ b/views/polls.ejs
@@ -50,5 +50,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- The javascript code related to save functionality in this page -->
+    <script src="polls.js"></script>
   </body>
 </html>
