--- a/views/createPoll.ejs
+++ b/views/createPoll.ejs
@@ -85,5 +85,8 @@
 
   <!-- Bootstrap JS (Optional for functionality like dropdowns) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- SweetAlert scripts (for poll creation acknowledgement) -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
