--- a/views/pastpolls.ejs
+++ b/views/pastpolls.ejs
@@ -228,7 +228,9 @@
 
 <%- include('templates/footer') %>
 
+<!-- Bootstrap and SweetAlert scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <!-- Client-side scripts -->
 <script>
